tests/parser-test-files/bad-files/parse-lisp.3.error
error: Malformed lisp expression
  --> test:4:10
   |
 4 |  (define f (lisp (T -> T) (x y)))
   |            ^^^^^^^^^^^^^^^^^^^^^ expected body
